fixing button small media style

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ h4 {
 }
 
 @media screen and (max-width 642px) {
-  .hero button {
-    margin: 0 auto 20px;
+  .hero .button {
+    margin: 0px auto 20px;
   }
 }
 
